--- a/config.yml
+++ b/config.yml
@@ -6,21 +6,23 @@ ins:
         method: 'GET'
         url: 'https://forecast9.p.rapidapi.com/rapidapi/forecast/Berlin/summary/'
         headers: 
-          - 'x-rapidapi-host': 'forecast9.p.rapidapi.com'
-          - 'x-rapidapi-key': 'deadbeef2'
+          'x-rapidapi-host': 'forecast9.p.rapidapi.com'
+          'x-rapidapi-key': 'deadbeef'
     - jsonpath:
-        'items': '$.forecast.items.*'
-        'forecastDate': '$.forecast.[forecastDate]'
-        'nextUpdate': '$.forecast.[nextUpdate]'
+        paths: 
+          - 'items': '$.forecast.items.[*]'
+          - 'forecastDate': '$.forecast.[forecastDate]'
+          - 'nextUpdate': '$.forecast.[nextUpdate]'
     - template:
         text: >
             "{% for item in items %}
-               {{ item.weather.text }}
+               {{ item.date}}
+               {{ item.weather.text }} {{ item.temperature.min }}-{{ item.temperature.max }}°C {{ item.wind.direction }} {{item.wind.min }}-{{ item.wind.max }}{{ item.wind.unit }}
             {% endfor %}" 
 outs:
   printer:
-    - epson-pos:
-        ip: 192.168.0.1
+    - epsonpos:
+        ip: 192.168.0.4
   email:
     - sendgrid:
         api-key: abcdd
